kubernetes/unifi-network-application/overlays/okd/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: unifi-network-application
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: unifi.arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 10.101.1.1/32
    - type: Allow
      to:
        cidrSelector: 10.101.10.1/32
    - type: Allow
      to:
        dnsName: unas.arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 10.101.1.6/32
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
